nbaapp2/AplicaKubernetes/Servicios/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jlandin
  labels: 
    tipo: aplicacionweb
