nbaapp2/AplicaKubernetes/Servicios/servicioaplicacion.yaml
apiVersion: v1
kind: Service 
metadata:
  name: aplicacion-s
  labels:
    app: apliweb
spec:
    type: NodePort
    ports: 
    - port: 80
      protocol: "TCP"
      targetPort: 80
    selector:
      app: apliweb
