nbaapp2/AplicaKubernetes/Servicios/serviciodb.yaml
apiVersion: v1
kind: Service 
metadata:
  name: localhost2
  labels:
    app: dbweb

spec:
    type: NodePort
    ports: 
    - port: 3306
      targetPort: 3306

    selector:
      app: dbweb
